saw pdf sizing issue on iphone x, fixed

--- a/styles/_resume.scss
+++ b/styles/_resume.scss
@@ -32,7 +32,7 @@ $titleFont: 'Merriweather', serif;
 
         .pdf-file {    
             padding-top: 10%;
-            height: 70%;
+            height: 66%;
         }
     }   
 }
