--- a/styles/main.css
+++ b/styles/main.css
@@ -213,7 +213,7 @@
 @media (min-width: 375px) and (min-height: 812px) {
   .pdf-container .pdf-file {
     padding-top: 10%;
-    height: 70%;
+    height: 66%;
   }
 }
 
